<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AdventureActivity!</string>
    <string name="app_name">Android Adventure</string>
    <string name="viewLabel">Your View</string>
    <string name="itemsHeldLabel">My Items</string>
    <string name="west">Go West</string>
    <string name="north">Go North</string>
    <string name="south">Go South</string>
    <string name="east">Go East</string>
    <string name="up">Go Up</string>
    <string name="down">Go Down</string>
    <string name="grab1">Grab 1</string>
    <string name="grab2">Grab 2</string>
    <string name="drop1">Drop 1</string>
    <string name="drop2">Drop 2</string>
    <string name="myView">My View</string>
    <string name="myThings">My Things</string>
    <string name="action_settings">Action</string>
    <string name="load">Load Game</string>
    <string name="hard">New Game (Hard)</string>
    <string name="normal">New Game (Normal)</string>
    <string name="saveGame">Save Game</string>

</resources>
