<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testView0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/roomView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/myView" />

    <TextView
        android:id="@+id/myItems"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:text="@string/myThings" >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <Button
        android:id="@+id/goNorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/north"
        android:onClick="myClickHandler"/>

    <Button
        android:id="@+id/goUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/up"
        android:onClick="myClickHandler"/>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <Button
        android:id="@+id/goWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/west"
        android:onClick="myClickHandler"/>

    <Button
        android:id="@+id/goEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/east"
        android:onClick="myClickHandler"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/goSouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:onClick="myClickHandler"
            android:text="@string/south" />

        <Button
        android:id="@+id/goDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:onClick="myClickHandler"
        android:text="@string/down" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        <Button
            android:id="@+id/grab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:onClick="myClickHandler"
            android:text="@string/grab" />

        <Button
            android:id="@+id/drop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:onClick="myClickHandler"
            android:text="@string/drop1" />

            <Button
                android:id="@+id/drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:onClick="myClickHandler"
                android:text="@string/drop2" />

            </LinearLayout>
    </LinearLayout>